# kitsune

./: .gitignore  .zenodo.json  CITATION.cff  README.md  docker-compose.local.yaml
.github/: dependabot.yaml
.github/workflows/: docker-publish.yml  frontend-linting.yml  frontend-tests.yml  python-tests.yml
api/: .env.example  Dockerfile.dev  Dockerfile.prod  pyproject.toml  requirements.txt
api/app/: config.py  database.py  dependencies.py  main.py  mcp.py  models.py  schemas.py
api/app/routers/: __init__.py  concepts.py  harmonization.py  imports.py  info.py  mappings.py  models.py  terminologies.py  vectorizers.py  visualization.py
api/app/schemas/: __init__.py  concept.py  maping.py  terminology.py
api/app/tasks/: __init__.py  file_tasks.py  import_tasks.py  ols_tasks.py
client/: Dockerfile.dev  Dockerfile.prod  README.md  angular.json  package-lock.json  package.json
client/src/: index.html  styles.scss
client/src/app/: app.component.ts  app.config.ts  app.html  app.routes.ts  app.scss  app.spec.ts  app.ts
client/src/app/banner/: banner.component.html  banner.component.scss  banner.component.ts
client/src/app/chord-diagram/: chord-diagram.component.html  chord-diagram.component.scss  chord-diagram.component.ts
client/src/app/core-model/: core-model-dialog.service.ts  core-model-table.service.ts  core-model.component.html  core-model.component.scss  core-model.component.ts
client/src/app/core-model-admin/: core-model-admin.component.html  core-model-admin.component.scss  core-model-admin.component.ts  core-model-dialog.service.ts  core-model-table.service.spec.ts  core-model-table.service.ts
client/src/app/core-model-table/: core-model-table.component.html  core-model-table.component.scss  core-model-table.component.ts
client/src/app/extend-cdm-dialog/: extend-cdm-dialog.component.html  extend-cdm-dialog.component.scss  extend-cdm-dialog.component.spec.ts  extend-cdm-dialog.component.ts
client/src/app/guards/: auth-role.guard.ts
client/src/app/harmonize/: harmonize.component.html  harmonize.component.ts
client/src/app/home/: home.component.html  home.component.scss  home.component.ts
client/src/app/info-dialog/: info-dialog.component.ts
client/src/assets/: core_model.json
client/src/environments/: environment.production.ts  environment.ts
ollama/: ollama_start.sh
postgresql/: docker-compose.yml
(+139 files in other folders)
